# SMTP-LAB

./: .gitignore  Cargo.toml  README.md
desktop-app/src/: app.js  index.html  styles.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/src/: lib.rs  main.rs
docs/design/: SMTP-Lab-UI-Design.md  hacker-theme-design.md  hacker-theme.css
docs/superpowers/plans/: 2026-03-25-batch-monitor-history.md  2026-03-26-builtin-templates.md
docs/superpowers/specs/: 2026-03-25-batch-monitor-history-design.md
smtp-cli/: Cargo.toml
smtp-cli/src/: cli.rs  config_file.rs  main.rs  output.rs  types.rs
smtp-cli/src/commands/: batch.rs  config.rs  diagnose.rs  history.rs  mod.rs  profiles.rs  send.rs
smtp-core/: Cargo.toml
smtp-core/src/: batch.rs  config.rs  diagnostics.rs  error.rs  history.rs  lib.rs  log.rs  profile.rs  smtp.rs  tls.rs
vscode-extension/: package-lock.json  package.json
vscode-extension/src/: extension.ts
