[workspace]
members = [
    "smtp-core",
    "smtp-cli",
    "desktop-app/src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["SMTP Lab Contributors"]

[workspace.dependencies]
smtp-core = { path = "smtp-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
