[package]
name = "smtp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for SMTP server testing and diagnostics"

[[bin]]
name = "smtp-test"
path = "src/main.rs"

[dependencies]
smtp-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
colored = "3"
