[package]
name = "smtp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core SMTP testing library — connectivity, auth, TLS, DNS diagnostics"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
lettre = { version = "0.11", features = ["tokio1-native-tls", "tokio1-rustls-tls"] }
native-tls = "0.2"
tokio-native-tls = "0.3"
rustls = "0.23"
trust-dns-resolver = "0.23"
base64 = "0.22"
